--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "tiny-typed-emitter": "^2.1.0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.0-dev.20220129"
   },
   "dependencies": {
     "blessed": "^0.1.81",
