--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@types/blessed": "^0.1.19",
     "tiny-typed-emitter": "^2.1.0",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.6.0-dev.20220129"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.6.1-rc"
   },
   "dependencies": {
     "blessed": "^0.1.81",
