--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
   "license": "MIT",
   "devDependencies": {
     "@types/blessed": "^0.1.19",
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
+    "madge": "^5.0.1",
     "tiny-typed-emitter": "^2.1.0",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.6.1-rc"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
-    "blessed": "^0.1.81",
-    "madge": "^5.0.1"
+    "blessed": "^0.1.81"
+  },
+  "pkg": {
+    "assets": [
+      "node_modules/**/*"
+    ]
   }
 }
