--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "A node.js terminal game.",
   "main": "src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build:clean": "rimraf dist/*",
+    "build:src": "tsc",
+    "build": "npm-run-all build:clean build:src",
+    "deploy:clean": "rimraf exec/*",
+    "deploy:make": "PKG_CACHE_PATH=./exec/ pkg .",
+    "deploy": "npm-run-all build deploy:clean deploy:make",
     "start": "ts-node src/index.ts",
     "test": "jest",
     "madge": "madge --circular --extensions ts ."
@@ -23,17 +28,27 @@
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
     "madge": "^5.0.1",
-    "tiny-typed-emitter": "^2.1.0",
+    "npm-run-all": "^4.1.5",
+    "pkg": "^5.5.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "tiny-typed-emitter": "^2.1.0",
     "blessed": "^0.1.81"
   },
+  "bin": "dist/src/index.js",
   "pkg": {
+    "scripts": "dist/**/*.js",
     "assets": [
-      "node_modules/**/*"
-    ]
+      "node_modules/blessed/usr/**/*"
+    ],
+    "targets": [
+      "node16-linux-x64",
+      "node16-win-x64"
+    ],
+    "outputPath": "exec/"
   }
 }
