--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/blessed": "^0.1.19",
     "@types/jest": "^27.4.1",
+    "@types/yargs": "^17.0.9",
     "jest": "^27.5.1",
     "madge": "^5.0.1",
     "npm-run-all": "^4.1.5",
@@ -36,8 +37,9 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "blessed": "^0.1.81",
     "tiny-typed-emitter": "^2.1.0",
-    "blessed": "^0.1.81"
+    "yargs": "^17.3.1"
   },
   "bin": "dist/src/index.js",
   "pkg": {
